...
    cancel = "Cancel",
    input = "Input",
    picker = "Picker",
    system = "System",
    dark = "Dark",
    light = "Light",
    appSettings = "App Settings",
    back = "Back",
    colorTheme = "Color Theme",
    alarmOrder = "Alarm Order",
    alarmOrderDescription = "Choose whether alarms appear by when they were created or by the time they go off.",
    creationOrder = "Creation Order",
    timeOrder = "Time",
...
    sendFeedbackMessage = "Send feedback to the developer",
    supportEmail = "aregbestimi@gmail.com",
    emailChooserTitle = "Send Email",
    defaultSendText = "Default Alarm",
    shareMathAlarm = "Share Math Alarm",
    shareWithOthers = "Check out this cool alarm app",
    share = "Share",
    taskAlarmPermissionDialogText = "In order for alarms to work, Math alarm needs the permission to set alarms. If this permission is not granted, the existing alarms will not work as well.",
    taskAlarmPermissionDialogCancel = "Not now",
    taskAlarmPermissionDialogConfirm = "Grant",
    notification = "Notification",
    alert = "Ringtone",
    grantPermission = "Grant Permission",
...
