...
        iosTrailingItems = listOf(
            UIKitUIBarButtonItem(
                image = UIKitImage.SystemName("xmark.bin"),
                onClick = { openDialog() },
            ),
            UIKitUIBarButtonItem(
                image = UIKitImage.SystemName("gearshape"),
                onClick = onSettingsClick,
            ),
        ),
    )
}

...
